test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/0_name/unknown/UNKNOWN_NAME.t
function f():void
{
    @static_test { expect_message={ level="LEVEL_ERROR", id="UNKNOWN_NAME", parameters={ id="x" } } }
    x=13;
}
